== UNRELEASED

  * New committer, Abhay Kumar
  * Implement all three encodings. Fix extended encoding calculation.
  * Support bar thickness/spacing for bar charts
  * (bug #16565 fixed) GChart now tells you when your chart is too big.
  * Pushed some bar chart params logic down where it belongs

== 0.3.0 (2007-12-24)
  
  * Breaking change: labels --> legend
  * Switched to RSpec, added skeletal specs for all types
  * Extensive refactoring, pulled chart types into GChart::Base subclasses
  * (bug) Errors in the static helpers should report a reasonable file and line

== 0.2.0 (2007-12-12)

  * Support for basic :labels
  * Support for pie3d
  * Minor doc cleanups

== 0.1.0 (2007-12-10)

  * Birthday!